Fixed bad wall shadow clipping between tiles.

--- a/public/app/grid.css
+++ b/public/app/grid.css
@@ -22,7 +22,6 @@
 
 .tile {
   position: absolute;
-  overflow: hidden;
 }
 
 .tile-map {
@@ -51,6 +50,8 @@
   border-color: rgba(0, 0, 0, 0);
   background-clip: padding-box;
   pointer-events: none;
+  /* Clip to tile, including the drop-shadow effect. */
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .widget-layer {
@@ -99,8 +100,6 @@
 .walls-layer {
   z-index: 2;
   filter: drop-shadow(2px 2px 3px #919191);
-  /* Clip to tile, including the drop-shadow effect. */
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .floors-layer {
